Style: Improve checkbox appearance and fix textarea spacing bug

--- a/src/app/sections/contact/contact.component.scss
+++ b/src/app/sections/contact/contact.component.scss
@@ -15,6 +15,12 @@ section {
 
 .content {
   @include mix.flex(flex, start, space-between);
+  margin-top: 45px;
+}
+
+textarea {
+  all: unset;
+  vertical-align: top;
 }
 
 .headline-container {
@@ -66,7 +72,6 @@ a {
   height: 100%;
   gap: 1.5rem;
   max-width: 500px;
-  margin-top: 2rem;
 }
 
 .input-wrapper {
@@ -142,14 +147,7 @@ textarea.invalid {
 .checkbox-wrapper {
   display: flex;
   align-items: flex-start;
-
-  input[type="checkbox"] {
-    margin-right: 0.5rem;
-    margin-top: 0.2rem;
-    accent-color: s.$green;
-    width: 18px;
-    height: 18px;
-  }
+  flex-direction: column;
 
   a {
     color: s.$deep-purple;
@@ -158,8 +156,7 @@ textarea.invalid {
 
 .custom-checkbox {
   display: flex;
-  align-items: flex-start;
-  cursor: pointer;
+  align-items: center;
   position: relative;
   user-select: none;
   gap: 0.5rem;
@@ -167,9 +164,13 @@ textarea.invalid {
   input[type="checkbox"] {
     position: absolute;
     opacity: 0;
+    width: 22px;
+    height: 22px;
+    border: 2px solid s.$green;
+    border-radius: 4px;
+    margin: 0;
+    z-index: 2;
     cursor: pointer;
-    height: 0;
-    width: 0;
   }
 
   .checkmark {
@@ -179,27 +180,26 @@ textarea.invalid {
     border-radius: 4px;
     background-color: transparent;
     position: relative;
-    top: 2px;
     flex-shrink: 0;
     transition: all 0.3s ease;
   }
 
-  input:checked ~ .checkmark {
-    background-color: s.$green;
-    border-color: s.$green;
+  &:hover .checkmark {
+    box-shadow: 0 0 18px 3px rgba(0, 255, 0, 0.4);
   }
 
   .checkmark::after {
     content: "";
     position: absolute;
     display: none;
-    left: 5px;
-    top: 1px;
-    width: 4px;
-    height: 9px;
-    border: solid white;
+    top: 39%;
+    left: 51%;
+    width: 5px;
+    height: 10px;
+    border: solid #70e61c;
     border-width: 0 2px 2px 0;
-    transform: rotate(45deg);
+    border-radius: 1px;
+    transform: translate(-50%, -50%) rotate(45deg);
   }
 
   input:checked ~ .checkmark::after {
@@ -208,7 +208,7 @@ textarea.invalid {
 
   .checkbox-text {
     font-size: 14px;
-    line-height: 1.4;
+    line-height: 120%;
 
     a {
       color: s.$deep-purple;
