--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,10 @@ body {
   box-sizing: border-box;
 }
 
+textarea {
+  font-family: "Poppins", sans-serif;
+}
+
 .activeLink {
   color: $green;
   text-decoration: none;
